change data in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-  "name": "Tuhin.web",
+  "name": "Tuhin App",
   "short_name": "Tuhin",
-  "start_url": "/",
+  "start_url": "/web.app/",
+  "scope": "/web.app/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "background_color": "#111111",
+  "theme_color": "#111111" , 
   "icons": [
     {
-      "src": "imgs/LogoBig1.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "imgs/LogoBig1.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
